✨ feat: add delete duck endpoint
